<resources>
    <string name="app_name">Termin</string>
    <string name="toolbar_title">Ihre Termin</string>
    <string name="search_title">Suche</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="future">Zukunft</string>
    <string name="Neutermin">Neue Termin hinzufügen</string>
    <string name="calendar">Kalender</string>
    <string name="letzte">Letzte</string>
    <string name="sprache">sprache</string>
    <string name="Deutsch" translatable="false">Deutsch</string>
    <string name="Russian" translatable="false">Русский</string>
    <string name="English" translatable="false">English</string>
    <string name="date">Datum</string>
    <string name="importance">Bedeutung</string>
    <string name="description">Beschreibung</string>
    <string name="category">Kategorie</string>
    <string name="medicine">Medizin</string>
    <string name="leisure">Freizeit</string>
    <string name="other">Sonstiges</string>
    <string name="title">Titel</string>
    <string name="job">Arbeit</string>
    <string name="high">Hoch</string>
    <string name="middle">Mitte</string>
    <string name="low">Niedrig</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="time">Time</string>
    <string name="save">Speichern</string>
    <string name="show">Show</string>

    <string-array name="categories">
        <item>@string/medicine</item>
        <item>@string/job</item>
        <item>@string/leisure</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="importanceArray">
        <item>@string/high</item>
        <item>@string/middle</item>
        <item>@string/low</item>
    </string-array>


</resources>