<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/language"
         android:title="@string/sprache"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/sub_menu_de"
                android:icon="@drawable/ic_germany"
                android:title="@string/Deutsch" />
            <item
                android:id="@+id/sub_menu_ru"
                android:icon="@drawable/ic_russia"
                android:title="@string/Russian" />
            <item
                android:id="@+id/sub_menu_en"
                android:icon="@drawable/ic_united_kingdom"
                android:title="@string/English" />
        </menu>
    </item>

</menu>